# site-manager

./: pyproject.toml
backend/: .env.example
backend/apps/api/: router.py  serializers.py  urls.py  views.py
backend/apps/docker_core/: admin.py  apps.py  models.py
backend/apps/docker_core/migrations/: 0001_initial.py  0002_alter_sitecore_docker_compose.py  0003_sitecore_options.py
backend/apps/main/: admin.py  models.py  oidc.py  views.py
backend/apps/main/migrations/: 0001_initial.py  0002_site_delete_telegramprofile.py
backend/backend/: settings.py  urls.py
backend/templates/admin/: login.html
backend/util/: docker.py  file_functions.py
frontend/: .env.local.example  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/: PageLayout.jsx
frontend/src/components/SitesTable/: NewSiteModal.jsx  index.jsx
frontend/src/lib/: cookies.ts  menu.js  sites.js  user.ts
frontend/src/lib/sites/: SiteManager.js  core_list.js
frontend/src/pages/: _app.tsx  index.jsx  web-config.jsx
frontend/src/pages/api/: callback.ts  sites.js
frontend/src/styles/: antd.scss  global.css  vars.css
